--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,31 @@
 .subtitle {
     text-align: left;
     color: rgb(255, 145, 106);
-
 }
-.bullets {
-    font-size: 18px;
-    color: rgb(255, 99, 42)
+
+.recipe-subtitle {
+    text-align: center;
+    font-size: 25px;
+    color:rgb(28, 104, 78);
+    background-color: rgb(243, 245, 158);
+    font-family:'Courier New', Courier, monospace;
+}
+
+.recipe-bullets {
+    font-size: 17px;
+    color:rgb(255, 145, 106)
+}
+.recipe-text {
+    color: green;
+}
+
+p {
+    font-size: 16px;
+    text-align: center;
+    color: rgb(75, 75, 241)
+}
+
+a {
+    font-size: px;
+    color:rgb(28, 104, 78);
 }
